[gd_scene load_steps=7 format=3 uid="uid://cashsm4715qst"]

[ext_resource type="Texture2D" uid="uid://dad0nmyk7usou" path="res://Free/Items/Items Icons/next.png" id="1_epqca"]
[ext_resource type="Script" path="res://scenes/item_anzeige.gd" id="1_wxhcf"]
[ext_resource type="Texture2D" uid="uid://kjpvgoybx0hx" path="res://Free/Items/Items Icons/heart pixel art/heart pixel art 254x254.png" id="2_oanvy"]
[ext_resource type="Texture2D" uid="uid://cn3r80wpru5pe" path="res://Free/Items/Items Icons/icons8-plus-96.png" id="3_1hnpt"]
[ext_resource type="Texture2D" uid="uid://bnga84q2ie4ma" path="res://Free/Items/Items Icons/shield.png" id="3_nl5ka"]
[ext_resource type="Texture2D" uid="uid://cu1b3e30wuonh" path="res://Free/Items/Items Icons/jump.png" id="4_m0ddn"]

[node name="itemAnzeige" type="Node2D"]
position = Vector2(215, 30)
script = ExtResource("1_wxhcf")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = -101.0
offset_top = -21.0
offset_right = 716.0
offset_bottom = 18.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer1" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
focus_neighbor_right = NodePath("../HBoxContainer2")

[node name="Speed" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer1"]
visible = false
layout_mode = 2
texture = ExtResource("1_epqca")
expand_mode = 2

[node name="plus1" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer1"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture = ExtResource("3_1hnpt")
expand_mode = 2

[node name="Heart" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer1"]
visible = false
layout_mode = 2
texture = ExtResource("2_oanvy")
expand_mode = 2

[node name="HeartVisible" type="Timer" parent="MarginContainer/HBoxContainer/HBoxContainer1/Heart"]

[node name="Shild" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer1"]
visible = false
layout_mode = 2
texture = ExtResource("3_nl5ka")
expand_mode = 2

[node name="Jump" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer1"]
visible = false
layout_mode = 2
texture = ExtResource("4_m0ddn")
expand_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_stretch_ratio = 0.0

[node name="Speed" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
texture = ExtResource("1_epqca")
expand_mode = 2

[node name="plus1" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
visible = false
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
texture = ExtResource("3_1hnpt")
expand_mode = 2

[node name="Heart" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
texture = ExtResource("2_oanvy")
expand_mode = 2

[node name="HeartVisible2" type="Timer" parent="MarginContainer/HBoxContainer/HBoxContainer2/Heart"]

[node name="Shild" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
texture = ExtResource("3_nl5ka")
expand_mode = 2

[node name="Jump" type="TextureRect" parent="MarginContainer/HBoxContainer/HBoxContainer2"]
visible = false
layout_mode = 2
texture = ExtResource("4_m0ddn")
expand_mode = 2

[connection signal="timeout" from="MarginContainer/HBoxContainer/HBoxContainer1/Heart/HeartVisible" to="." method="_on_heart_visible_timeout"]
[connection signal="timeout" from="MarginContainer/HBoxContainer/HBoxContainer2/Heart/HeartVisible2" to="." method="_on_heart_visible_2_timeout"]
